--- a/src/app/component/homepage/homepage.component.html
+++ b/src/app/component/homepage/homepage.component.html
@@ -1,10 +1,12 @@
 <app-header></app-header>
 <div class="hero">
-    <section class="hero">
+    <section class="content">
         <div class="hero-content">
-          <h1>Welcome to Nova Tax Client Management</h1>
-          <p>Efficiently manage your clients and streamline your tax and accounting services with our comprehensive CRM solution.</p>
-          <a href="#contact" class="btn-primary">Get Started</a>
+          <div class="hero-content-letter">
+            <h1>Welcome to Nova Tax Client Management</h1>
+            <p>Efficiently manage your clients and streamline your tax and accounting services with our comprehensive CRM solution.</p>
+            <button mat-raised-button>Get Started</button>
+          </div>
         </div>
       </section>
       <div class="welcome-msg pt-3 pb-4">
@@ -31,9 +33,7 @@
           </div>
         </div>
       </section>
-  
 </div>
-
 <footer>
   <app-footer></app-footer>
 </footer>
