--- a/src/app/component/dashboard/dashboard.component.html
+++ b/src/app/component/dashboard/dashboard.component.html
@@ -1,16 +1,11 @@
 <app-header></app-header>
-<div class="main-content">
-
-  <!-- content -->
+<div class="hero">
   <div class="container-fluid content-top-gap">
 
     <div class="welcome-msg pt-3 pb-4">
       <h1>Hi <span class="text-dark">{{user.name}}</span>, Welcome back</h1>
       <!-- <p>You logged in as {{user.role}}</p> -->
-      
     </div>
-
-    <!-- User data -->
     <div class="statistics">
       <div class="row">
         <div class="col-xl-6 pr-xl-2">
@@ -51,8 +46,8 @@
         </div>
       </div>
     </div>
-    
   </div>
-  <!-- //content -->
 </div>
-<!-- main content end-->
+<footer>
+  <app-footer></app-footer>
+</footer>
