--- a/src/app/component/header/header.component.scss
+++ b/src/app/component/header/header.component.scss
@@ -34,9 +34,9 @@
     display: flex;
     align-items: center;
 //     background-color: #1976d2;
-background-color: grey;
-    color: white;
-    font-weight: 600;
+background-color: white;
+    color: black;
+    font-weight: 400;
   }
 
   .toolbar img {
@@ -58,9 +58,8 @@ background-color: grey;
     opacity: 0.8;
   }
 
-  //additional
   .toolbar a {
-    color: #fff;
+    color: black;
     text-decoration: none;
     margin-right: 20px;
     font-size: 18px;
