--- a/src/app/component/profile/profile.component.scss
+++ b/src/app/component/profile/profile.component.scss
@@ -1,15 +1,34 @@
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    background-color: #f8f9fa;
-  }
-  
+.hero{
+  height: 80%;
+}
+
   .site-section {
     padding: 50px 0;
   }
   
+  .header{
+    padding-top:125px;
+  } 
+
+  .header h2 {
+    font-size: 28px;
+    color: #343a40;
+    margin-bottom: 20px;
+    animation: slideIn 1.5s ease-out;
+}
+
+
+  @keyframes slideIn {
+    from {
+        transform: translateX(-100%);
+        opacity: 0;
+    }
+    to {
+        transform: translateX(0);
+        opacity: 1;
+    }
+}
+
   .heading-21921 {
     font-size: 28px;
     color: #343a40;
@@ -48,20 +67,7 @@ body {
     outline: none;
   }
   
-  .btn {
-    padding: 10px 20px;
-    font-size: 16px;
-    color: white;
-    background-color: #007bff;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    transition: background-color 0.3s;
-  }
-  
-  .btn:hover {
-    background-color: #0056b3;
-  }
+
   
   .text-center {
     text-align: center;
