--- a/src/app/component/users/users.component.scss
+++ b/src/app/component/users/users.component.scss
@@ -1,27 +1,42 @@
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    background-color: #f8f9fa;
+  .hero{
+    height: 80%;
   }
-  
+
+  .background-image{
+    background-image: url('/../../assets/img/nova-tax.jpg');
+    background-size: cover;
+    padding: 100px 0;
+  }
+
   .admin-container {
-    max-width: 600px;
-    margin: 50px auto;
-    padding: 20px 20px 0px 20px;
+    width: 90%;
+    height: 100%;
+    padding: 20px 20px 20px 20px;
     background-color: white;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   }
 
   .tag-library {
-    max-width: 600px;
-    margin: 50px auto;
-    padding: 20px 20px 0px 20px;
+    width: 90%;
+    height: 100%;
+    padding: 20px 20px 20px 20px;
     background-color: white;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  }
+
+  .admin-container, .tag-library {
+    transition: all 0.3s ease;
+    cursor: pointer;
+    overflow: hidden;
+  }
+  
+  .admin-container:hover, .tag-library:hover {
+    width: 100%;
+    padding: 30px;
+    background-color: #e8e8e8;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   }
 
   button{
@@ -36,6 +51,15 @@ body {
     margin: 5px;
     display: inline-block;
     color: white;
+}
+
+
+.btn-primary {
+  --bs-btn-color: #fff;
+  --bs-btn-bg: grey;
+  --bs-btn-border-color: #grey;
+  --bs-btn-hover-color: #fff;
+  --bs-btn-hover-bg: black;
 }
 
 .tag-color-1 { background-color: #3498db; }
